--- a/src/main/resources/com/mahmoud/computerstore/view/inventory_view.fxml
+++ b/src/main/resources/com/mahmoud/computerstore/view/inventory_view.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mahmoud.computerstore.view.Inventory">
    <children>
-      <ImageView fitHeight="400.0" fitWidth="603.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fitHeight="406.0" fitWidth="603.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/CSSbgLightBlueHorizontal.png" />
          </image>
@@ -29,7 +29,7 @@
             <DropShadow />
          </effect>
       </Button>
-      <Button contentDisplay="CENTER" layoutX="45.0" layoutY="190.0" mnemonicParsing="false" onAction="#openCPUs" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="CPUs" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="185.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="470.0" AnchorPane.topAnchor="185.0">
+      <Button contentDisplay="CENTER" layoutX="45.0" layoutY="190.0" mnemonicParsing="false" onAction="#openCPUs" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="CPUs" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="185.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="460.0" AnchorPane.topAnchor="185.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -37,7 +37,7 @@
             <DropShadow />
          </effect>
       </Button>
-      <Button contentDisplay="CENTER" layoutX="45.0" layoutY="230.0" mnemonicParsing="false" onAction="#openGPUs" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="GPUs" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="145.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="470.0" AnchorPane.topAnchor="225.0">
+      <Button contentDisplay="CENTER" layoutX="45.0" layoutY="230.0" mnemonicParsing="false" onAction="#openGPUs" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="GPUs" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="145.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="460.0" AnchorPane.topAnchor="225.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -45,7 +45,7 @@
             <DropShadow />
          </effect>
       </Button>
-      <Button contentDisplay="CENTER" layoutX="45.0" layoutY="270.0" mnemonicParsing="false" onAction="#openStorages" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Storages" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="105.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="470.0" AnchorPane.topAnchor="265.0">
+      <Button contentDisplay="CENTER" layoutX="45.0" layoutY="270.0" mnemonicParsing="false" onAction="#openStorages" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Storages" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="105.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="460.0" AnchorPane.topAnchor="265.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -53,7 +53,7 @@
             <DropShadow />
          </effect>
       </Button>
-      <Button contentDisplay="CENTER" layoutX="45.0" layoutY="310.0" mnemonicParsing="false" onAction="#openCases" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Cases" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="470.0" AnchorPane.topAnchor="305.0">
+      <Button contentDisplay="CENTER" layoutX="45.0" layoutY="310.0" mnemonicParsing="false" onAction="#openCases" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Cases" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="460.0" AnchorPane.topAnchor="305.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -61,7 +61,7 @@
             <DropShadow />
          </effect>
       </Button>
-      <Button contentDisplay="CENTER" layoutX="450.0" layoutY="190.0" mnemonicParsing="false" onAction="#openMotherboards" prefHeight="25.0" prefWidth="98.0" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Motherboards" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="185.0" AnchorPane.leftAnchor="470.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="185.0">
+      <Button contentDisplay="CENTER" layoutX="463.0" layoutY="190.0" mnemonicParsing="false" onAction="#openMotherboards" prefHeight="32.0" prefWidth="100.0" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Motherboards" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="185.0" AnchorPane.leftAnchor="460.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="185.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -69,7 +69,7 @@
             <DropShadow />
          </effect>
       </Button>
-      <Button contentDisplay="CENTER" layoutX="491.0" layoutY="230.0" mnemonicParsing="false" onAction="#openRAMs" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="RAMs" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="145.0" AnchorPane.leftAnchor="470.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="225.0">
+      <Button contentDisplay="CENTER" layoutX="491.0" layoutY="230.0" mnemonicParsing="false" onAction="#openRAMs" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="RAMs" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="145.0" AnchorPane.leftAnchor="460.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="225.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -77,7 +77,7 @@
             <DropShadow />
          </effect>
       </Button>
-      <Button contentDisplay="CENTER" layoutX="491.0" layoutY="270.0" mnemonicParsing="false" onAction="#openStorages" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="PSUs" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="105.0" AnchorPane.leftAnchor="470.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="265.0">
+      <Button contentDisplay="CENTER" layoutX="491.0" layoutY="270.0" mnemonicParsing="false" onAction="#openStorages" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="PSUs" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="105.0" AnchorPane.leftAnchor="460.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="265.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -85,7 +85,7 @@
             <DropShadow />
          </effect>
       </Button>
-      <Button contentDisplay="CENTER" layoutX="491.0" layoutY="310.0" mnemonicParsing="false" onAction="#openCoolers" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Coolers" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="470.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="305.0">
+      <Button contentDisplay="CENTER" layoutX="491.0" layoutY="310.0" mnemonicParsing="false" onAction="#openCoolers" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Coolers" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="460.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="305.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
